fix(landing): wrong padding top body on mobile

--- a/.vuepress/theme/styles/layout/common.scss
+++ b/.vuepress/theme/styles/layout/common.scss
@@ -6,6 +6,12 @@ a {
     }
 }
 
+
+body.banner-open {
+    padding-top: 35px;
+}
+
+
 #container {
     padding-top: 68px;
 
